Fix checkbox not showing up in Chrome browser

--- a/src/index.css
+++ b/src/index.css
@@ -155,6 +155,10 @@ main {
   height: 6rem;
 }
 
+.todo-list-name {
+  width: 100%;
+}
+
 .todo-list-name input {
   background: transparent;
   border: 0;
@@ -162,6 +166,7 @@ main {
   color: white;
   font-size: 1.5rem;
   font-weight: bold;
+  width: 100%;
 }
 
 .todo-list-progress {
@@ -194,7 +199,6 @@ main {
   background-color: transparent;
   font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
-  width: 100%;
 }
 
 .task-status {
